--- a/smartlivestock/smartlivestock/Views/Shared/_Layout.cshtml
+++ b/smartlivestock/smartlivestock/Views/Shared/_Layout.cshtml
@@ -68,9 +68,9 @@
             color:white;
             text-align:justify-all;
             bottom: 0;
-            width: 100%;         
+            width: 100%; 
             background-color: #0d6efd; /* Adjust the background color as needed */
-            padding: 8px 0; /* Adjust the padding as needed */
+            padding: 5px 0; /* Adjust the padding as needed */
         }
 
         /*For Sub Menu*/
@@ -178,8 +178,9 @@
                                          <a class="dropdown-item" asp-area="" asp-controller="FlowUps" asp-action="Index">FlowUps</a>
                                          <a class="dropdown-item" asp-area="" asp-controller="GeneralExaminations" asp-action="Index">General Examinations</a>
                                          <a class="dropdown-item" asp-area="" asp-controller="Invastigations" asp-action="Index">Invastigations</a>
-                                         <a class="dropdown-item" asp-area="" asp-controller="Medicines" asp-action="Index">Medicines</a>                                  
-                                         <a class="dropdown-item" asp-area="" asp-controller="ReferredToes" asp-action="Index">ReferredTo</a>
+                                         <a class="dropdown-item" asp-area="" asp-controller="Medicines" asp-action="Index">Medicines</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ShortNotes" asp-action="Index">ShortNotes</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ReferredToes" asp-action="Index">ReferredTo</a>
 
                                     </div>
                                 </div>
@@ -265,6 +266,7 @@
                                         <a class="dropdown-item" asp-area="" asp-controller="GeneralExaminations" asp-action="Index">General Examinations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Invastigations" asp-action="Index">Invastigations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Medicines" asp-action="Index">Medicines</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ShortNotes" asp-action="Index">ShortNotes</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="ReferredToes" asp-action="Index">ReferredTo</a>
 
 
@@ -330,6 +332,7 @@
                                         <a class="dropdown-item" asp-area="" asp-controller="GeneralExaminations" asp-action="Index">General Examinations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Invastigations" asp-action="Index">Invastigations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Medicines" asp-action="Index">Medicines</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ShortNotes" asp-action="Index">ShortNotes</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="ReferredToes" asp-action="Index">ReferredTo</a>
 
 
@@ -389,6 +392,7 @@
                                         <a class="dropdown-item" asp-area="" asp-controller="GeneralExaminations" asp-action="Index">General Examinations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Invastigations" asp-action="Index">Invastigations</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Medicines" asp-action="Index">Medicines</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ShortNotes" asp-action="Index">ShortNotes</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="ReferredToes" asp-action="Index">ReferredTo</a>
 
                                     </div>
@@ -484,17 +488,3 @@
         }
     }
 </script>
-
-@* <li class="nav-item">
-    <div class="dropdown">
-        <button class="dropdown-button">Setup</button>
-        <div class="dropdown-content">
-
-            <a class="dropdown-item" asp-area="" asp-controller="Trainingvideos" asp-action="Index">Videos</a>
-
-            <a class="dropdown-item" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
-
-            <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">User</a>
-        </div>
-    </div>
-</li> *@
