--- a/smartlivestock/smartlivestock/Views/Medicines/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Medicines/Create.cshtml
@@ -16,6 +16,17 @@
                 <input asp-for="MedName" class="form-control" />
                 <span asp-validation-for="MedName" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="MediType" class="control-label"></label>
+                <input asp-for="MediType" class="form-control" />
+                <span asp-validation-for="MediType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GenName" class="control-label"></label>
+                <input asp-for="GenName" class="form-control" />
+                <span asp-validation-for="GenName" class="text-danger"></span>
+            </div>
             <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
